fixed margins of navbar on smaller devices

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,11 +15,16 @@
   }
 }
 .menu-button {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 35px;
   padding: 10px;
   margin-top: 10px;
   cursor: pointer;
   border: none;
   background-color: transparent;
+  text-align: center;
+
+  @include respond(phone-xs){
+    
+  }
 }
